[package]
name = "BOBWFullInformationFlashback"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#matrix = "0.22.0"
#plotlib = "0.3.0"
rand = { version = "0.8.0" }
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
plotters = "0.3.3"