[package]
name = "BOBWFullInformationFlashback"
version = "0.1.0"
edition = "2021"

#GUROBI_HOME = "/Library/gurobi1100/macos_universal2/bin/gurobi.sh"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#matrix = "0.22.0"
#plotlib = "0.3.0"
rand = { version = "0.8.0" }
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
ndarray-stats = "0.5.1"
gurobi = { version = "0.3.4" }

#good_lp = { version = "1.3.3" }
#plotters = "0.3.3"
#charming = "0.3.1"
#yew = "0.21.0"
